# arch-install

./: .gitmodules  BIOS.txt  README  README.md  TODO  arch-rebuild  arch-rebuild.cabal  bootloader  cabal.project  cabal.project.freeze  config.sh  disk.sh  do.sh  fstab.sh  functions.sh  install.sh  install_chroot.sh  mirrorlist  run.sh  umount_all.sh  wifi.sh
arch-rebuild/: arch-rebuild.cabal
arch-rebuild/src/: Checks.hs  Chroot.hs  Command.hs  Config.hs  Disk.hs  Error.hs  FilePath.hs  Filesystem.hs  FsTree.hs  Fstab.hs  Install.hs  Main.hs  Match.hs  Util.hs
bootctl/: arch-lts.conf.sh  arch.conf  arch.conf.sh
config/: blockdev.dhall  boot.dhall  custom.dhall  disk.dhall  extraFiles.dhall  fstab.dhall  install.dhall  pacman.dhall  secrets.dhall  storage.dhall  system.dhall  uuid.dhall  withUuid.dhall
config/pacman/: TODO  aur.dhall  explicit.dhall  generate.sh  groups.dhall  minimal.dhall  mirrorlist.dhall  packages.dhall
config/pacman/minimal/: aur.dhall  groups.dhall  packages.dhall
config/systemd-boot/: arch-initial-build.conf.dhall  arch-lts.conf.dhall  arch.conf.dhall
doc/: my-BIOS-settings.txt
extra/: restore_my_stuff.sh  rsync_etc.sh  rsync_home.sh
old/: fstab.sh  install_chroot.sh  run.sh
pkgs/: aur-pkgs.pacman  explicit-pkgs.pacman  groups-pkgs.pacman  installed-pkgs.pacman
src/: AUR.hs  Build.hs  Checks.hs  Chroot.hs  Command.hs  Config.hs  Disk.hs  Error.hs  FilePath.hs  Filesystem.hs  FsTree.hs  Fstab.hs  Install.hs  Main.hs  Match.hs  Version.hs
tools/: .gitignore  README  TODO  arch-rebuild  boot-qemu.sh  bootstrap-qemu.sh  build-image.sh  build-img.sh  build.sh  bundle-host-etc-aur.sh  bundle-host-etc.sh  copy-home.sh  get-iso.sh  hoogle-generate-deps.sh  mkosi.arch  mkosi.patch  mkosi.postinst  qemu.conf  run-qemu.sh  run.sh
tools/haskell/: index-code.sh
tools/mkosi.extra/arch-rebuild-helpers/: build-rootfs.sh  configure-net.sh  create-disk.sh  mount-virtfs.sh  prepare.sh
tools/mkosi.extra/etc/pacman.d/: mirrorlist
