cabal-version:       3.0

name:                arch-rebuild
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
category:            System

executable arch-rebuild
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       Config
                     , Checks
                     , Chroot
                     , Command
                     , Disk
                     , Filesystem
                     , FilePath
                     , FsTree
                     , Install
                     , Match
                     , Fstab
                     , Error
                     , Version

  build-depends:       base ^>=4.12.0.0
                     , data-default-class
                     , unix
                     , text
                     , attoparsec
                     , optparse-generic
                     , mtl
                     , rio
                     , unliftio
                     , interpolate
                     , dhall
                     , o-clock
                     , lens
                     , lens-aeson
                     , aeson
                     , string-conversions
                     , uuid
                     , network-uri
                     , binary
                     , pretty-show
                     , githash
