cabal-version:       2.4

name:                arch-rebuild
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
category:            System
extra-source-files:  CHANGELOG.md

executable arch-rebuild
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
                     , Command
                     , Disk
                     , Match
                     , Install
  build-depends:       base ^>=4.12.0.0
                     , unix
                     , attoparsec
                     , optparse-generic
                     , rio
                     , interpolate
                     , dhall
                     , o-clock
                     , labels
                     , microlens-platform
                     , string-conversions
