cabal-version:       2.4

name:                arch-rebuild
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
category:            System

executable arch-rebuild
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
                     , Chroot
                     , Command
                     , Disk
                     , Install
                     , Match
                     , Fstab
  build-depends:       base ^>=4.12.0.0
                     , unix
                     , attoparsec
                     , optparse-generic
                     , mtl
                     , rio
                     , interpolate
                     , dhall
                     , o-clock
                     , labels
                     , lens
                     , lens-aeson
                     , generic-lens
                     , aeson
                     , string-conversions
                     , uuid
                     , errors
