cabal-version:       2.4

name:                arch-rebuild
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
category:            System

executable arch-rebuild
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       Config
                     , Checks
                     , Chroot
                     , Command
                     , Disk
                     , Filesystem
                     , Install
                     , Match
                     , Fstab
                     , Error
                     , Util

  build-depends:       base ^>=4.12.0.0
                     , unix
                     , text
                     , attoparsec
                     , optparse-generic
                     , mtl
                     , rio
                     , unliftio
                     , interpolate
                     , dhall
                     , o-clock
                     , lens
                     , lens-aeson
                     , aeson
                     , string-conversions
                     , uuid
                     , binary
                     , pretty-show
